--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="footer content">
-                    <h2 class="title">line của icon</h2>
+                    <!-- <h2 class="title">line của icon</h2> -->
                     <p class="description">We love music</p>
                 </div>
                 
